11980 libc_db: 'td_sync_setstate' alias between functions of incompatible types Reviewed by: Robert Mustacchi <rm+illumos@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>